[package]
name = "proc-debug-macro"
description = "Dump proc-macro output for efficient debugging"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.4"
proc-macro-error = "1.0"
darling = "0.20.10"

[dependencies.syn]
version = "2.0"
features = [ "full", "derive", "printing", "extra-traits"]
