[package]
name = "proc-debug-macro"
description = "Dump proc-macro output for efficient debugging"
version = "0.1.5"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
edition = "2021"
repository = "https://github.com/yasuo-ozu/proc-debug"
keywords = ["macros", "cargo", "pretty", "debug", "test"]
categories = ["development-tools::procedural-macro-helpers", "development-tools::debugging"]
license = "MIT"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.4"
proc-macro-error = "1.0"
darling = "0.20.10"

[dependencies.syn]
version = "2.0"
features = [ "full", "derive", "printing", "extra-traits"]
